# Intern-Manager

./: .gitignore  InternManager.spec  README.md  pyproject.toml
.github/workflows/: build_mac.yml
data/: Biomedicina - Híbrido - Estética.xlsx
data/imports/: asdf.csv
resources/: create_db.sql  interns.db
src/: config.py  main.py  testes.py
src/core/: constants.py
src/core/models/: comment.py  document.py  evaluation_criteria.py  grade.py  intern.py  meeting.py  observation.py  venue.py
src/data/: database.py
src/models/: comment.py  document.py  intern.py  venue.py
src/repository/: comment_repo.py  document_repo.py  evaluation_criteria_repo.py  grade_repo.py  intern_repo.py  meeting_repo.py  observation_repo.py  venue_repo.py
src/services/: base_service.py  comment_service.py  document_service.py  evaluation_criteria_service.py  export_service.py  grade_service.py  import_service.py  intern_service.py  meeting_service.py  observation_service.py  report_service.py  venue_service.py
src/ui/: criteria_view.py  dashboard_view.py  delegates.py  main_window.py  styles.py  venue_view.py
src/ui/components/: metric_card.py  stat_card.py
src/ui/dialogs/: batch_meeting_dialog.py  criteria_dialog.py  criteria_manager_dialog.py  document_dialog.py  grade_dialog.py  intern_dialog.py  meeting_dialog.py  observation_dialog.py  report_dialog.py  settings_dialog.py  venue_dialog.py  venue_manager_dialog.py
src/utils/: seeder.py  validations.py
